# prime_Kalia_Vansh

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_kalia_vansh/: __init__.py  prime_kalia_vansh.py
tests/: test_prime_kalia_vansh.py
