[tool.poetry]
name = "prime_kalia_vansh"
version = "0.1.0"
description = "This is a package that contains a function to test prime number."
authors = ["Vansh Murad Kalia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
sphinx = "^7.2.6"
pytest = "^7.4.3"
pandas = "^2.1.2"
pytest-cov = "^4.1.0"
myst-nb = "1.0.0rc0"
autoapi = "^2.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
